<resources>
    <string name="app_name">The Pics Quiz</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="impossible_connect">Impossible to connect</string>
    <string name="no_internet">Apparently there is no internet connection</string>
    <string name="try_again">Try Again</string>
    <string name="update_app_title">Update the app</string>
    <string name="update_app_description">This version is outdated, please, install the last version to continue using it.</string>
    <string name="update_app_button">Update</string>
    <string name="title_generic_error">Sorry!</string>
    <string name="desc_generic_error">There was an error</string>
    <string name="more_languages">More languages coming soon</string>
    <string name="normal">Normal</string>
    <string name="timed">Timed</string>
    <string name="modes">Modes</string>
    <string name="progress">Progress package</string>
    <string name="close_description">Are you sure you want to close the game?</string>
    <string name="close_game_title">Close game</string>
    <string name="close">Close</string>
    <string name="free">Free</string>
    <string name="wrong">Wrong</string>
    <string name="skip">SKIP</string>
    <string name="hint">HINT</string>
    <string name="super_hint">SUPER HINT</string>
    <string name="pause">PAUSE</string>
    <string name="report_title">Would you like to report something?</string>
    <string name="report_match">Word and image do not match</string>
    <string name="report_misspelling">Word is misspelling</string>
    <string name="report_other">Other</string>
    <string name="report_comment">Comment</string>
    <string name="congratulations">Congratulations</string>
    <string name="completed">Completed</string>
    <string name="report_send">Send report</string>
    <string name="thanks">Thank you</string>
    <string name="reset_title">Reset</string>
    <string name="reset_description">You already complete this. Would you like to reset it?</string>
    <string name="settings_title">Settings</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="new_levels_mark">NEW LEVELS</string>
    <string name="stars">Brains</string>
    <string name="remove_ads">Brains + Remove Ads</string>
    <string name="free_stars">Free Brains</string>
    <string name="stars_shop">Brains</string>
    <string name="stars_shop_title">Get some Brains</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="watch_video">Watch a video</string>
    <string name="score">Score</string>
    <string name="unlock">Unlock</string>
    <string name="open_level_would_you">Would you like to open this level?</string>
    <string name="open_level_ok">Open it</string>
    <string name="open_level_stars">You don\'t have enough brains</string>
    <string name="open_level_watch_video">Watch a video to open</string>
    <string name="go_to_shop">Go to the shop</string>
    <string name="stars_dialog_title">Not enough brains</string>
    <string name="stars_dialog_description">You cannot use it</string>
    <string name="level_only_english">Levels just in english:  </string>
</resources>
