<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="500dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_report_quit"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/btn_trasparent"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_quit" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBackgroundDialog"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_bg_dialog" />

    <com.github.glomadrian.grav.GravView
        android:id="@+id/ly_include_dots_anim__"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="20dp"
        app:alpha_from="100"
        app:alpha_max_duration="3000"
        app:alpha_min_duration="1600"
        app:alpha_to="255"
        app:array_colors="@array/Spectral"
        app:ball_from_size="2dp"
        app:ball_to_size="6dp"
        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
        app:layout_constraintBottom_toBottomOf="@+id/imgBackgroundDialog"
        app:layout_constraintEnd_toEndOf="@+id/imgBackgroundDialog"
        app:layout_constraintStart_toStartOf="@+id/imgBackgroundDialog"
        app:layout_constraintTop_toTopOf="@+id/imgBackgroundDialog"
        app:percent_points_array="@array/walla_points_percent_points"
        app:pointGenerator="com.github.glomadrian.grav.generator.point.PercentPointGenerator"
        app:shake_direction="vertical"
        app:shake_max_duration="3500"
        app:shake_min_duration="1100"
        app:shake_variance="5dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title_generic_dialog"
        style="@style/ParentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:maxWidth="300dp"
        android:text="@string/report_title"
        android:textColor="@color/text_dialog_image"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ly_include_dots_anim__"
        app:layout_constraintEnd_toEndOf="@+id/ly_include_dots_anim__"
        app:layout_constraintStart_toStartOf="@+id/ly_include_dots_anim__"
        app:layout_constraintTop_toTopOf="@+id/ly_include_dots_anim__" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_top_btm_section_dialog"
        android:layout_width="0dp"
        android:layout_height="@dimen/dialog_bar"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_include_dots_anim__"
        android:src="@drawable/info_bar_black" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroupReport" />

    <RadioGroup
        android:id="@+id/radioGroupReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_top_btm_section_dialog">

        <RadioButton
            android:id="@+id/radioMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa"
            android:text="@string/report_match"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioMisspelling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa"
            android:text="@string/report_misspelling"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa"
            android:text="@string/report_other"
            android:textColor="@color/white" />


    </RadioGroup>


    <EditText
        android:id="@+id/report_comment_edit"
        android:background="@color/white"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_description_dialog"
        android:hint="@string/report_comment"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupReport" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_report"
        style="@style/BtnMain"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"
        android:minWidth="250dp"
        android:text="@string/report_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_comment_edit" />

    <View
        android:id="@+id/bottom_margin"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_report" />


</androidx.constraintlayout.widget.ConstraintLayout>